# dtcc-i-h-2025-insight-nexus

./: .gitignore  README.md
Compliance Regulation Assistant/: Dockerfile  requirements.txt
Compliance Regulation Assistant/app/: main.py
Compliance Regulation Assistant/app/.streamlit/: config.toml
Compliance Regulation Assistant/app/components/: compare_component.py  upload_component.py
Compliance Regulation Assistant/app/services/: chatbot.py  comparator.py  compare_qa.py  create_vector_store.py  impact_summary.py  pdf_handler.py  qa_llm.py  summarizer.py
GenAI Marketview/stock_analysis/: config.py  data_collection.py  main.py  narration.py  news.py  requirements.txt  visualizations.py
GenAI Marketview/stock_analysis/.streamlit/: config.toml
StockSage Bot/: meta_data.json  pyproject.toml
StockSage Bot/.streamlit/: config.toml
StockSage Bot/instrument_insights_chat/: app.py  aws_client.py  config.py  session.py  utils.py
StockSage Bot/mcp_server/: config.py  db.py  main.py  meta_data.json  resources.py  tools.py
StockSage Bot/src/: test_server.py
chatbot/: package-lock.json  package.json
chatbot/src/: App.jsx  config.js  index.css  main.jsx
