[project]
name = "aapl-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.9",
    "boto3>=1.38.28",
    "fastapi>=0.115.12",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.2",
    "nest-asyncio>=1.6.0",
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "ta>=0.11.0",
    "wikipedia-api>=0.8.1",
    "yfinance>=0.2.61",
]
